--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rnacanvas/base-pairs.oopified",
-  "version": "1.18.0",
-  "description": "For working with base-pairs in an object-oriented way",
+  "version": "1.18.1",
+  "description": "Work with base-pairs in an object-oriented way",
   "repository": {
     "type": "git",
     "url": "https://github.com/pzhaojohnson/rnacanvas.base-pairs.oopified.git"
@@ -17,11 +17,11 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-typescript": "^7.23.3",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
+    "babel-jest": "^30.1.2",
+    "jest": "^30.1.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^6.0.1"
   }
 }
